fix : 로직수정